--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 postgresinit:
-	docker run --name postgres15 -p 5433:5433 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=password -d postgres:15-alpine
+	docker run --name postgres15 -p 5433:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=password -d postgres:15-alpine
 
 postgres:
 	docker exec -it postgres15 psql
@@ -9,5 +9,11 @@ createdb:
 
 dropdb:
 	docker exec -it postgres15 dropdp go-chat
+
+migrateup:
+	migrate -path db/migrations -database "postgresql://root:password@localhost:5433/go-chat?sslmode=disable" -verbose up
+
+migratedown:
+	migrate -path db/migrations -database "postgresql://root:password@localhost:5433/go-chat?sslmode=disable" -verbose down
 
 .PHONY: postgresinit postgres createdb dropdb
